Remove superfluous custom view.
Change-Id: Ied7b3df2f8ce10534a8a6a5b05d0bd424249db9a

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<org.wikipedia.views.WikiDrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.FixedDrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation_drawer"
@@ -82,4 +82,4 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="?attr/paper_color"/>
-</org.wikipedia.views.WikiDrawerLayout>
+</androidx.drawerlayout.widget.FixedDrawerLayout>
