Use PhotoView in the Gallery for zooming images.
Change-Id: I1b2c5569de2b166f65de0fe15249af833f41a901

--- a/app/src/main/res/layout/fragment_gallery_item.xml
+++ b/app/src/main/res/layout/fragment_gallery_item.xml
@@ -35,7 +35,7 @@
             app:srcCompat="@drawable/ic_play_circle" />
     </FrameLayout>
 
-    <ImageView
+    <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/gallery_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
