--- a/app/src/main/res/layout/fragment_onboarding_pager.xml
+++ b/app/src/main/res/layout/fragment_onboarding_pager.xml
@@ -41,6 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:background="@android:color/transparent"
                 app:tabIndicator="@null"
                 app:tabPaddingStart="8dp"
                 app:tabPaddingEnd="8dp"
