--- a/app/src/main/res/layout/activity_page.xml
+++ b/app/src/main/res/layout/activity_page.xml
@@ -8,7 +8,7 @@
     android:layout_gravity="end"
     tools:context=".page.PageActivity">
 
-    <FrameLayout
+    <org.wikipedia.views.FrameLayoutNavMenuTriggerer
         android:id="@+id/activity_page_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -80,7 +80,7 @@
 
         </FrameLayout>
 
-    </FrameLayout>
+    </org.wikipedia.views.FrameLayoutNavMenuTriggerer>
 
     <FrameLayout
         android:id="@+id/toc_container"
