--- a/app/src/main/res/xml/developer_preferences.xml
+++ b/app/src/main/res/xml/developer_preferences.xml
@@ -315,6 +315,11 @@
             android:title="@string/preference_key_suggested_edits_override_reverts" />
 
         <SwitchPreferenceCompat
+            android:key="@string/preference_key_suggested_edits_reactivation_test"
+            android:title="@string/preference_key_suggested_edits_reactivation_test"
+            android:summary="Change the 3 or 7 days editor reactivation rules to minutes"/>
+
+        <SwitchPreferenceCompat
             android:key="@string/preference_key_suggested_edits_reactivation_pass_stage_one"
             android:title="@string/preference_key_suggested_edits_reactivation_pass_stage_one"
             android:summary="The first local notification for editor reactivation has shown."/>
