--- a/app/src/main/res/layout/fragment_contributions_suggested_edits.xml
+++ b/app/src/main/res/layout/fragment_contributions_suggested_edits.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<org.wikipedia.views.SwipeRefreshLayoutWithScroll xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/refreshContainer"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,4 +9,4 @@
         android:layout_height="match_parent"
         android:background="?attr/paper_color"
         android:scrollbars="vertical" />
-</org.wikipedia.views.SwipeRefreshLayoutWithScroll>
+</LinearLayout>
