Improved support for keyboard navigation, Phase 1.
Change-Id: I9e80d8876d834618bb0c7448fd94001ade83bb22

--- a/app/src/main/res/layout-land/view_onboarding_page.xml
+++ b/app/src/main/res/layout-land/view_onboarding_page.xml
@@ -97,6 +97,7 @@
                         android:layout_marginTop="8dp"
                         android:textColor="?attr/material_theme_primary_color"
                         app:theme="@style/OnboardingSwitch"
+                        android:focusable="true"
                         tools:text="Lorem ipsum" />
 
                     <View
