--- a/app/src/main/res/layout-sw600dp/view_suggested_edits_task_item.xml
+++ b/app/src/main/res/layout-sw600dp/view_suggested_edits_task_item.xml
@@ -74,6 +74,8 @@
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:padding="4dp"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toBottomOf="@id/taskDescription"
@@ -108,6 +110,8 @@
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:padding="4dp"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_marginStart="16dp"
         app:layout_constraintTop_toTopOf="@id/addContainer"
         app:layout_constraintStart_toEndOf="@id/addContainer"
