--- a/app/src/main/res/layout/fragment_search_recent.xml
+++ b/app/src/main/res/layout/fragment_search_recent.xml
@@ -41,6 +41,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:clickable="true"
+            android:focusable="true"
             android:text="@string/add_wikipedia_languages_text"
             android:textColor="?attr/secondary_text_color"
             app:backgroundTint="?attr/button_background_color"
@@ -78,6 +80,7 @@
                 android:layout_height="48dp"
                 android:layout_gravity="end"
                 android:clickable="true"
+                android:focusable="true"
                 android:contentDescription="@string/button_clear_all_recent_searches"
                 android:foreground="?attr/actionBarItemBackground"
                 android:longClickable="true"
