--- a/app/src/main/res/layout/dialog_link_preview.xml
+++ b/app/src/main/res/layout/dialog_link_preview.xml
@@ -26,6 +26,7 @@
                 android:layout_height="wrap_content"
                 android:background="?attr/selectableItemBackground"
                 android:clickable="true"
+                android:focusable="true"
                 android:minHeight="64dp">
 
                 <ImageView
@@ -64,6 +65,8 @@
                     android:background="?attr/actionBarItemBackground"
                     android:contentDescription="@string/abc_action_menu_overflow_description"
                     android:padding="12dp"
+                    android:clickable="true"
+                    android:focusable="true"
                     app:srcCompat="@drawable/ic_more_vert_white_24dp"
                     app:tint="?attr/material_theme_secondary_color" />
             </LinearLayout>
