--- a/app/src/main/res/layout/item_page_list_entry.xml
+++ b/app/src/main/res/layout/item_page_list_entry.xml
@@ -59,6 +59,8 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@null"
             android:visibility="gone"
+            android:clickable="true"
+            android:focusable="true"
             app:srcCompat="@drawable/ic_download_circle_gray_24dp"
             tools:visibility="visible" />
 
@@ -78,7 +80,9 @@
             style="@style/ImageViewDefault"
             android:layout_width="@dimen/view_list_card_item_image"
             android:layout_height="@dimen/view_list_card_item_image"
-            android:layout_marginEnd="@dimen/list_item_horizontal_padding" />
+            android:layout_marginEnd="@dimen/list_item_horizontal_padding"
+            android:clickable="true"
+            android:focusable="true" />
 
         <ImageView
             android:id="@+id/page_list_item_selected_image"
