--- a/app/src/main/res/layout/view_card_on_this_day.xml
+++ b/app/src/main/res/layout/view_card_on_this_day.xml
@@ -66,6 +66,7 @@
                 android:layout_marginStart="1dp"
                 android:background="?attr/paper_color"
                 android:clickable="true"
+                android:focusable="true"
                 android:clipChildren="false"
                 android:clipToPadding="false"
                 android:foreground="?attr/selectableItemBackgroundBorderless"
@@ -124,6 +125,7 @@
         android:layout_marginTop="-6dp"
         android:background="?attr/paper_color"
         android:clickable="true"
+        android:focusable="true"
         android:foreground="?attr/selectableItemBackground"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
