--- a/app/src/main/res/layout/view_list_card.xml
+++ b/app/src/main/res/layout/view_list_card.xml
@@ -32,6 +32,7 @@
         android:layout_below="@+id/view_list_card_list"
         android:background="?attr/selectableItemBackground"
         android:clickable="true"
+        android:focusable="true"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
         android:visibility="gone"
