--- a/app/src/main/res/layout/view_onboarding_language_list.xml
+++ b/app/src/main/res/layout/view_onboarding_language_list.xml
@@ -32,6 +32,8 @@
         android:layout_width="match_parent"
         android:layout_height="36dp"
         android:layout_marginStart="8dp"
+        android:clickable="true"
+        android:focusable="true"
         android:background="?attr/selectableItemBackground"
         android:gravity="center_vertical">
 
