--- a/app/src/main/res/layout/view_suggested_edits_task_item.xml
+++ b/app/src/main/res/layout/view_suggested_edits_task_item.xml
@@ -76,6 +76,8 @@
         android:padding="4dp"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="8dp"
+        android:clickable="true"
+        android:focusable="true"
         app:layout_constraintTop_toBottomOf="@id/taskDescription"
         app:layout_constraintStart_toEndOf="@id/taskIconCircle"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -108,6 +110,8 @@
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:padding="4dp"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_marginStart="16dp"
         app:layout_constraintTop_toTopOf="@id/addContainer"
         app:layout_constraintStart_toEndOf="@id/addContainer"
