--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -47,6 +47,7 @@
                     android:layout_marginEnd="8dp"
                     android:background="?attr/actionBarItemBackground"
                     android:clickable="true"
+                    android:focusable="true"
                     android:contentDescription="@string/preference_title_language"
                     android:paddingStart="9dp"
                     android:paddingTop="2dp"
