--- a/app/src/main/res/layout/item_search_result.xml
+++ b/app/src/main/res/layout/item_search_result.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:background="?attr/paper_color"
     android:foreground="?attr/selectableItemBackground"
+    android:focusable="true"
     android:paddingStart="@dimen/list_item_horizontal_padding"
     android:paddingTop="@dimen/list_item_vertical_padding"
     android:paddingEnd="@dimen/list_item_horizontal_padding"
