--- a/app/src/main/res/layout/view_page_header.xml
+++ b/app/src/main/res/layout/view_page_header.xml
@@ -33,6 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_gravity="bottom"
+            android:focusable="true"
             android:background="?attr/selectableItemBackground"
             android:gravity="center_vertical"
             android:paddingStart="12dp"
