--- a/app/src/main/res/layout/fragment_page.xml
+++ b/app/src/main/res/layout/fragment_page.xml
@@ -15,8 +15,7 @@
         <org.wikipedia.views.ObservableWebView
             android:id="@+id/page_web_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:focusable="true" />
+            android:layout_height="match_parent" />
 
         <FrameLayout
             android:id="@+id/page_empty_container"
