--- a/app/src/main/res/layout/item_suggested_edits_contributions.xml
+++ b/app/src/main/res/layout/item_suggested_edits_contributions.xml
@@ -1,28 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="8dp"
     android:background="?attr/selectableItemBackground"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:paddingEnd="8dp"
-        android:textColor="?attr/material_theme_de_emphasised_color"
-        android:textSize="@dimen/suggested_edits_message_textview_text_size"
-        android:textStyle="bold"
-        tools:text="Lorem ipsum" />
+    android:orientation="vertical"
+    android:paddingTop="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -35,12 +22,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginBottom="2dp"
                 android:textColor="?attr/material_theme_primary_color"
-                android:textSize="@dimen/suggested_edits_icon_title_text_size"
+                android:textSize="16sp"
                 android:textStyle="bold" />
 
-            <TextView
+            <org.wikipedia.views.GoneIfEmptyTextView
                 android:id="@+id/description"
                 style="@style/MaterialListTitle"
                 android:layout_width="match_parent"
@@ -55,34 +41,19 @@
         <ImageView
             android:id="@+id/image"
             style="@style/ImageViewDefault"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="@dimen/list_item_horizontal_padding"
             android:contentDescription="@null" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/editType"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp">
-
-        <ImageView
-            android:id="@+id/editTypeIcon"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:contentDescription="@null"
-            android:tint="?attr/material_theme_de_emphasised_color"
-            app:srcCompat="@drawable/ic_article_description" />
-
-        <TextView
-            android:id="@+id/editType"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:textColor="?attr/material_theme_de_emphasised_color"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            tools:text="Lorem ipsum" />
-    </LinearLayout>
+        android:textColor="?attr/material_theme_secondary_color"
+        android:textSize="16sp"
+        tools:text="Lorem ipsum" />
 </LinearLayout>
