--- a/app/src/main/res/layout/fragment_contributions_suggested_edits.xml
+++ b/app/src/main/res/layout/fragment_contributions_suggested_edits.xml
@@ -5,6 +5,33 @@
     android:background="?attr/paper_color"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/articleDescriptions"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Article descriptions" />
+
+        <TextView
+            android:id="@+id/imageCaptions"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Image captions" />
+
+        <TextView
+            android:id="@+id/imageTags"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Image tags" />
+
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/contributionsRecyclerView"
         android:layout_width="match_parent"
