Update toolbar text style.
Change-Id: Id704936e21e5ca0129810d2b7efe9e1fc949e122

--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -15,7 +15,7 @@
             android:id="@+id/fragment_feed_header"
             android:layout_width="match_parent"
             android:layout_height="72dp"
-            android:background="@color/accent30" />
+            android:background="?attr/paper_color" />
 
         <org.wikipedia.feed.view.FeedView
             android:id="@+id/fragment_feed_feed"
