--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,9 +23,10 @@
             style="@style/ToolbarStyle"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/main_toolbar_color"
+            android:background="?attr/paper_color"
             android:elevation="4dp"
             android:layout_marginStart="-12dp"
+            app:titleTextAppearance="@style/ToolbarTextAppearance"
             app:titleTextColor="?attr/main_toolbar_title_color"
             app:titleMarginStart="28dp">
 
