--- a/app/src/main/res/drawable/button_shape_wide_corners.xml
+++ b/app/src/main/res/drawable/button_shape_wide_corners.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="@color/base30"/>
-    <corners android:radius="8dp"/>
-</shape>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="?attr/material_theme_border_color">
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="?android:attr/colorBackground" />
+            <corners android:radius="8dp"/>
+        </shape>
+    </item>
+</ripple>
