Use proper theme style

--- a/app/src/main/res/layout/fragment_file_page.xml
+++ b/app/src/main/res/layout/fragment_file_page.xml
@@ -4,7 +4,7 @@
     android:id="@+id/swipeRefreshLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/main_toolbar_color">
+    android:background="?attr/paper_color">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -39,7 +39,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:background="?attr/main_toolbar_color"/>
+                android:background="?attr/paper_color"/>
         </LinearLayout>
     </ScrollView>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
