--- a/app/src/main/res/layout/date_picker_dialog.xml
+++ b/app/src/main/res/layout/date_picker_dialog.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="110dp"
-        android:background="?attr/main_toolbar_color"
+        android:background="?attr/paper_color"
         android:orientation="vertical"
         android:paddingStart="24dp"
         android:paddingTop="24dp"
@@ -25,7 +25,7 @@
             android:fontFamily="sans-serif-medium"
             android:lineSpacingExtra="4sp"
             android:text="@string/on_this_day_card_title"
-            android:textColor="?attr/main_toolbar_title_color"
+            android:textColor="?attr/toolbar_title_color"
             android:textSize="16sp"
             android:textStyle="normal"
             tools:text="ON THIS DAY" />
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-medium"
             android:text=""
-            android:textColor="?attr/main_toolbar_title_color"
+            android:textColor="?attr/toolbar_title_color"
             android:textSize="34sp"
             android:textStyle="normal" />
     </LinearLayout>
