--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -11,7 +11,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/main_toolbar_color"
+        android:background="?attr/paper_color"
         android:elevation="6dp">
 
         <androidx.appcompat.widget.Toolbar
@@ -88,7 +88,7 @@
         android:id="@+id/search_language_scroll_view_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/main_toolbar_color"
+        android:background="?attr/paper_color"
         android:elevation="6dp"
         android:orientation="vertical"
         android:visibility="gone">
