--- a/app/src/main/res/layout/view_description_edit_read_article_bar.xml
+++ b/app/src/main/res/layout/view_description_edit_read_article_bar.xml
@@ -25,7 +25,7 @@
         android:padding="@dimen/bottom_toolbar_item_padding"
         android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
-        android:tint="?attr/main_toolbar_icon_color"
+        android:tint="?attr/toolbar_icon_color"
         app:layout_constraintTop_toBottomOf="@+id/viewDivider"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
