--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <attr name="main_toolbar_color" format="reference"/>
-    <attr name="main_status_bar_color" format="reference"/>
-    <attr name="main_toolbar_title_color" format="reference"/>
-    <attr name="main_toolbar_icon_color" format="reference"/>
-    <attr name="page_status_bar_color" format="reference"/>
+    <attr name="toolbar_title_color" format="reference"/>
+    <attr name="toolbar_icon_color" format="reference"/>
     <attr name="page_expanded_status_bar_color" format="reference"/>
-    <attr name="page_toolbar_icon_color" format="reference"/>
     <attr name="themed_icon_color" format="reference"/>
     <attr name="edit_improve_tag_selected_drawable" format="reference" />
     <attr name="edit_improve_tag_unselected_drawable" format="reference" />
