--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -100,24 +100,24 @@
     </style>
 
     <style name="ToolbarTheme" parent="@style/ThemeOverlay.MaterialComponents.ActionBar">
-        <item name="colorControlNormal">?attr/main_toolbar_icon_color</item>
+        <item name="colorControlNormal">?attr/toolbar_icon_color</item>
     </style>
 
     <style name="PageToolbarTheme" parent="@style/ThemeOverlay.MaterialComponents.ActionBar">
-        <item name="colorControlNormal">?attr/page_toolbar_icon_color</item>
+        <item name="colorControlNormal">?attr/toolbar_icon_color</item>
         <item name="colorControlActivated">?android:attr/textColorTertiary</item>
         <item name="colorControlHighlight">?android:attr/textColorTertiary</item>
     </style>
 
     <style name="TabToolbarTheme" parent="@style/ThemeOverlay.MaterialComponents.ActionBar">
-        <item name="colorControlNormal">?attr/main_toolbar_icon_color</item>
-        <item name="colorControlActivated">?attr/main_toolbar_icon_color</item>
-        <item name="colorControlHighlight">?attr/main_toolbar_icon_color</item>
+        <item name="colorControlNormal">?attr/toolbar_icon_color</item>
+        <item name="colorControlActivated">?attr/toolbar_icon_color</item>
+        <item name="colorControlHighlight">?attr/toolbar_icon_color</item>
         <item name="navigationIcon">@drawable/ic_add_gray_themed_24dp</item>
     </style>
 
     <style name="ToolbarStyle" parent="@style/Widget.AppCompat.ActionBar">
-        <item name="background">?attr/main_toolbar_color</item>
+        <item name="background">?attr/paper_color</item>
         <item name="navigationIcon">?attr/homeAsUpIndicator</item>
         <item name="elevation">4dp</item>
         <item name="titleTextStyle">@style/ToolBarTitleText</item>
@@ -145,7 +145,7 @@
     </style>
 
     <style name="ToolBarTitleText" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
-        <item name="android:textColor">?attr/main_toolbar_title_color</item>
+        <item name="android:textColor">?attr/toolbar_title_color</item>
     </style>
 
     <style name="PageToolbarTitleText" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
@@ -157,34 +157,34 @@
     </style>
 
     <style name="ActionModeStyle" parent="@style/Widget.AppCompat.ActionMode">
-        <item name="background">?attr/main_toolbar_color</item>
-        <item name="backgroundSplit">?attr/main_toolbar_color</item>
+        <item name="background">?attr/paper_color</item>
+        <item name="backgroundSplit">?attr/paper_color</item>
         <item name="titleTextStyle">@style/ActionModeTitleStyle</item>
         <item name="subtitleTextStyle">@style/ActionModeSubtitleStyle</item>
     </style>
 
     <style name="PageActionModeStyle" parent="@style/Widget.AppCompat.ActionMode">
-        <item name="background">?attr/main_toolbar_color</item>
-        <item name="backgroundSplit">?attr/main_toolbar_color</item>
+        <item name="background">?attr/paper_color</item>
+        <item name="backgroundSplit">?attr/paper_color</item>
         <item name="titleTextStyle">@style/PageActionModeTitleStyle</item>
         <item name="subtitleTextStyle">@style/PageActionModeSubtitleStyle</item>
         <item name="android:elevation">4dp</item>
     </style>
 
     <style name="ActionModeTitleStyle" parent="@style/TextAppearance.AppCompat.Widget.ActionMode.Title">
-        <item name="android:textColor">?attr/main_toolbar_title_color</item>
+        <item name="android:textColor">?attr/toolbar_title_color</item>
     </style>
 
     <style name="ActionModeSubtitleStyle" parent="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle">
-        <item name="android:textColor">?attr/main_toolbar_title_color</item>
+        <item name="android:textColor">?attr/toolbar_title_color</item>
     </style>
 
     <style name="PageActionModeTitleStyle" parent="@style/TextAppearance.AppCompat.Widget.ActionMode.Title">
-        <item name="android:textColor">?attr/page_toolbar_icon_color</item>
+        <item name="android:textColor">?attr/toolbar_icon_color</item>
     </style>
 
     <style name="PageActionModeSubtitleStyle" parent="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle">
-        <item name="android:textColor">?attr/page_toolbar_icon_color</item>
+        <item name="android:textColor">?attr/toolbar_icon_color</item>
     </style>
 
     <style name="SearchViewStyle" parent="@style/Widget.AppCompat.SearchView">
@@ -195,7 +195,7 @@
 
     <style name="SearchViewEditTextStyle" parent="@style/Widget.AppCompat.AutoCompleteTextView">
         <item name="android:textCursorDrawable">@drawable/custom_cursor</item>
-        <item name="android:textColor">?attr/main_toolbar_icon_color</item>
+        <item name="android:textColor">?attr/toolbar_icon_color</item>
     </style>
 
     <style name="PageSearchViewStyle" parent="@style/Widget.AppCompat.SearchView">
@@ -205,13 +205,13 @@
     </style>
 
     <style name="PageSearchViewEditTextStyle" parent="SearchViewEditTextStyle">
-        <item name="android:textColor">?attr/page_toolbar_icon_color</item>
-        <item name="android:textColorHint">?attr/page_toolbar_icon_color</item>
+        <item name="android:textColor">?attr/toolbar_icon_color</item>
+        <item name="android:textColorHint">?attr/toolbar_icon_color</item>
     </style>
 
     <style name="LanguagesListSearchViewEditTextStyle" parent="SearchViewEditTextStyle">
         <item name="android:textColor">?attr/primary_text_color</item>
-        <item name="android:textColorHint">?attr/page_toolbar_icon_color</item>
+        <item name="android:textColorHint">?attr/toolbar_icon_color</item>
     </style>
 
     <style name="ListView" parent="@style/Widget.AppCompat.ListView">
@@ -413,7 +413,7 @@
     </style>
 
     <style name="TextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
-        <item name="boxBackgroundColor">?attr/main_toolbar_color</item>
+        <item name="boxBackgroundColor">?attr/paper_color</item>
         <item name="android:textColorHint">?attr/material_theme_de_emphasised_color</item>
         <item name="hintTextColor">?attr/colorAccent</item>
         <item name="helperTextTextColor">?attr/material_theme_de_emphasised_color</item>
