--- a/app/src/main/res/values/styles_black.xml
+++ b/app/src/main/res/values/styles_black.xml
@@ -7,11 +7,8 @@
         <item name="android:windowBackground">@color/base4</item>
 
         <!-- Overrides of our own custom color attributes -->
-        <item name="main_toolbar_color">@color/base14</item>
-        <item name="main_status_bar_color">@color/base14</item>
-        <item name="main_toolbar_title_color">@android:color/white</item>
-        <item name="main_toolbar_icon_color">@android:color/white</item>
-        <item name="page_status_bar_color">@color/base14</item>
+        <item name="toolbar_title_color">@android:color/white</item>
+        <item name="toolbar_icon_color">@android:color/white</item>
         <item name="page_expanded_status_bar_color">@color/base14</item>
         <item name="themed_icon_color">@android:color/white</item>
         <item name="nav_tab_background_color">@color/base14</item>
