--- a/app/src/main/res/values/styles_dark.xml
+++ b/app/src/main/res/values/styles_dark.xml
@@ -40,13 +40,9 @@
         <item name="button_highlight_border_shape">@drawable/button_shape_border_light</item>
 
         <!-- Overrides of our own custom color attributes -->
-        <item name="main_toolbar_color">@color/base18</item>
-        <item name="main_status_bar_color">@color/base18</item>
-        <item name="main_toolbar_title_color">@android:color/white</item>
-        <item name="main_toolbar_icon_color">@android:color/white</item>
-        <item name="page_status_bar_color">@color/base18</item>
+        <item name="toolbar_title_color">@android:color/white</item>
+        <item name="toolbar_icon_color">@android:color/white</item>
         <item name="page_expanded_status_bar_color">@color/base18</item>
-        <item name="page_toolbar_icon_color">@color/base100</item>
         <item name="themed_icon_color">@android:color/white</item>
         <item name="nav_tab_background_color">@color/base18</item>
         <item name="nav_tab_item_color_state">@color/color_state_nav_tab_dark</item>
