--- a/app/src/main/res/layout/item_suggested_edits_contributions.xml
+++ b/app/src/main/res/layout/item_suggested_edits_contributions.xml
@@ -22,6 +22,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:ellipsize="end"
+                android:maxLines="2"
                 android:textColor="?attr/material_theme_primary_color"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -33,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:ellipsize="end"
-                android:maxLines="3"
+                android:maxLines="2"
                 android:paddingEnd="8dp"
                 tools:text="Lorem ipsum" />
         </LinearLayout>
