--- a/app/src/main/res/layout/item_suggested_edits_type.xml
+++ b/app/src/main/res/layout/item_suggested_edits_type.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/baseView"
     android:layout_width="match_parent"
-    android:layout_height="56dp"
-    android:gravity="center_vertical"
-    android:orientation="horizontal">
-
-    <ImageButton
-        android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_margin="16dp"
-        android:background="@android:color/transparent"
-        android:contentDescription="@null"
-        android:tint="?attr/colorAccent" />
+    android:layout_height="40dp"
+    android:background="@drawable/rounded_12dp_corner_base90_fill"
+    android:gravity="center_vertical">
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:layout_marginStart="12dp"
+        android:layout_weight="1"
+        android:fontFamily="sans-serif-medium"
+        android:textSize="12sp" />
+
+    <ImageButton
+        android:id="@+id/image"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginEnd="12dp"
+        android:background="@android:color/transparent"
+        android:contentDescription="@null"
+        android:tint="?attr/colorAccent" />
 </LinearLayout>
