--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -16,7 +16,8 @@
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/fragment_main_view_pager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:background="?paper_color" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
