--- a/app/src/main/res/layout/fragment_suggested_edits_rewards_item.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_rewards_item.xml
@@ -4,12 +4,13 @@
     android:id="@+id/contentContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="4dp"
-    android:orientation="vertical">
+    android:padding="24dp"
+    android:orientation="vertical"
+    android:gravity="center">
 
     <ImageView
         android:id="@+id/rewardImage"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleType="fitCenter"
         android:contentDescription="@null"/>
@@ -18,6 +19,10 @@
         android:id="@+id/rewardText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:lineSpacingExtra="10sp"
+        android:textAlignment="center"
+        android:layout_marginTop="24dp"
         tools:text="Lorem ipsum"/>
 
 </LinearLayout>
