--- a/app/src/main/res/drawable/ic_illustration_quality_very_good.xml
+++ b/app/src/main/res/drawable/ic_illustration_quality_very_good.xml
@@ -17,13 +17,9 @@
       android:fillColor="#D5FDF4"
       android:fillType="evenOdd"/>
   <path
-      android:pathData="M156,34.75C139.846,34.75 126.75,47.846 126.75,64S139.846,93.25 156,93.25 185.25,80.154 185.25,64 172.154,34.75 156,34.75z"
-      android:strokeLineJoin="round"
-      android:strokeWidth="4.611"
-      android:fillColor="#00000000"
-      android:strokeColor="#00AF89"
-      android:fillType="evenOdd"
-      android:strokeLineCap="round"/>
+      android:pathData="M155.472,32.447c1.273,-0.023 2.324,0.99 2.346,2.264 0.023,1.273 -0.99,2.323 -2.264,2.346 -0.944,0.017 -1.89,0.083 -2.838,0.2 -14.77,1.813 -25.273,15.257 -23.46,30.027 1.814,14.77 15.258,25.273 30.028,23.46 14.77,-1.814 25.273,-15.258 23.46,-30.028 -0.155,-1.263 0.743,-2.414 2.007,-2.569 1.264,-0.155 2.414,0.744 2.57,2.007 2.123,17.298 -10.178,33.042 -27.475,35.166C142.548,97.444 126.804,85.143 124.68,67.846 122.556,50.548 134.857,34.804 152.154,32.68c1.107,-0.136 2.214,-0.214 3.318,-0.233z"
+      android:fillColor="#00AF89"
+      android:fillType="nonZero"/>
   <path
       android:pathData="M132.375,40.375L179.625,40.375L179.625,87.625L132.375,87.625z"
       android:fillColor="#FFF"
